Center align calculator and fix calc width

--- a/inst/app/www/index.css
+++ b/inst/app/www/index.css
@@ -14,3 +14,7 @@ body {
   content: "";
   display: table;
 }
+
+.calc-outer {
+  width: 240px;
+}
